# franka_ws_1

./: MUJOCO_LOG.TXT  README.md  compare_task_metrics.py  experiment_data_recorder.py  huatu  plot_comm_latency.py  plot_comm_latency_stats.py  plot_experiment_results.py  plot_mode_comparison.py  run_latency_benchmark.sh  run_task_metrics_benchmark.sh  sensor_dashboard.py  start_dual_arm_task.sh
.github/agents/: doc-reviewer.agent.md
codex_backups/: pre_codex_20260409_midcheck.patch
experiment_results/data/: experiment_chomp_only_20260408_212055.csv  experiment_chomp_only_20260408_215359.csv  experiment_chomp_only_20260409_103407.csv  experiment_chomp_only_20260409_105212.csv  experiment_chomp_only_20260409_121234.csv  experiment_chomp_only_20260409_141937.csv  experiment_compliant_20260408_211758.csv  experiment_compliant_20260408_215249.csv  experiment_compliant_20260408_220507.csv  experiment_compliant_20260408_221631.csv  experiment_compliant_20260408_222033.csv  experiment_compliant_20260408_222625.csv  experiment_compliant_20260408_222900.csv  experiment_compliant_20260409_103302.csv  experiment_compliant_20260409_105032.csv  experiment_compliant_20260409_120951.csv  experiment_compliant_20260409_135134.csv  experiment_compliant_20260409_141820.csv  experiment_compliant_chomp_20260408_210835.csv  experiment_compliant_chomp_20260408_215503.csv  experiment_compliant_chomp_20260408_223246.csv  experiment_compliant_chomp_20260409_103558.csv  experiment_compliant_chomp_20260409_105320.csv  experiment_compliant_chomp_20260409_121412.csv  experiment_compliant_chomp_20260409_123128.csv  experiment_compliant_chomp_20260409_124228.csv  experiment_compliant_chomp_20260409_131837.csv  experiment_compliant_chomp_20260409_135306.csv  experiment_compliant_chomp_20260409_142118.csv  experiment_compliant_chomp_20260409_142630.csv  (+7 more)
src/multipanda_ros2/dual_arm_carry_task/: CMakeLists.txt  README.md  package.xml
src/multipanda_ros2/dual_arm_carry_task/include/dual_arm_carry_task/: carry_task_context.hpp  dual_arm_controller.hpp  gripper_controller.hpp
src/multipanda_ros2/dual_arm_carry_task/launch/: dual_arm_carry_task.launch.py
src/multipanda_ros2/dual_arm_carry_task/src/: adaptive_compliance_supervisor.cpp  carry_task_state_machine.cpp  dual_arm_carry_task.cpp  dual_arm_controller.cpp  gripper_controller.cpp
src/multipanda_ros2/dual_arm_carry_task/src_backup/: adaptive_compliance_supervisor.cpp  communication_latency_monitor.cpp  dual_arm_carry_task.cpp  task_metrics_monitor.cpp
(+530 files in other folders)
